--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="h-full w-full overflow-hidden">
-  <div id="app" class="h-full w-full">
+  <div id="app" class="h-full w-full" v-cloak>
     <transition name="fade">
       <div v-if="finishedAt !== null" class="h-full w-full flex items-center justify-center fixed top-0 left-0 z-50"
         style="background: rgba(0,0,0,0.5);">
