--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sodist | A game for social distancing</title>
+  <title>Sodist | A social distancing game</title>
+  <meta name="description" content="Keep yourself busy! Keep your distance!">
   <link href="https://fonts.googleapis.com/css?family=Fredoka+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="dist/css/app.css">
   <script src="dist/js/vue.min.js" defer></script>
