--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </head>
 
   <body class="h-full w-full overflow-hidden">
-    <div id="p5_loading" class="loadingclass">
+    <div id="p5_loading" class="loading w-full h-full flex justify-center items-center">
       Loading ...
     </div>
 
