--- a/index copy.html
+++ b/index copy.html
@@ -70,7 +70,7 @@
     </canvas>
   </div>
 
-  <div id="p5_loading" class="loadingclass">
+  <div id="p5_loading" class="">
     Loading ...
   </div>
   <script src="js/index.js" defer></script>
